Updated new-day scripts

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "### These solutions were written on JavaScript by Melis Alibi. The Advent of Code 2021 started on 1st of December 2021.",
   "main": "index.js",
   "scripts": {
-    "new-day": "node scripts/start-new-day.js",
+    "new-day": "node scripts/start-new-day.js && subl .",
     "part-one-solved": "node scripts/part1-solved.js && git add . && git commit -m \"Part 1 Solved\"",
     "solved": "git add . && git commit -m \"$npm_config_message\" && git push origin head"
   },
